Ensures correct border radius clipping on tablets

--- a/css/layout-css/news-feed-style.upload.css
+++ b/css/layout-css/news-feed-style.upload.css
@@ -1476,7 +1476,8 @@
     right: auto;
     bottom: auto;
     border-radius: 20px;
-
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 
   .news-feed-detail-wrapper .news-feed-list-detail-image-wrapper {
